--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </h1>
 
 <body>
-    <button> <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">clickable text</a>  </button> 
+    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">clickable text</a> <br>
+    <br>
+
+    <img src="kedi.jpg" alt="Picture of an employee.">
+
 </body>
 </html>
